# pluvio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Gemfile  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: backend.yml  ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/fastlane/: Appfile  Fastfile  Pluginfile
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  crontab.example  docker-compose.yaml  pyproject.toml
backend/src/pluvio_backend/: __init__.py  api.py  cache.py  colormap.py  config.py  inference_worker.py  kmi_signing.py  schedules.py  stubs.py  tiler.py
backend/tests/: test_api.py  test_cache.py
deploy/ansible/: README.md  ansible.cfg  inventory.ini  site.yml
deploy/ansible/group_vars/: all.yml
deploy/ansible/roles/app/tasks/: main.yml
deploy/ansible/roles/app/templates/: env.j2
deploy/ansible/roles/nginx/handlers/: main.yml
deploy/ansible/roles/nginx/tasks/: main.yml
deploy/ansible/roles/nginx/templates/: pluvio.conf.j2
integration_test/: radar_flow_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  Fastfile  Pluginfile
ios/fastlane/metadata/en-US/: release_notes.txt
lib/: main.dart
lib/app/: app.dart  theme.dart
lib/core/config/: env.dart
lib/core/logging/: logger.dart
lib/core/networking/: api_failure.dart  dio_client.dart
lib/core/result/: result.dart
lib/features/location/application/: location_providers.dart
lib/features/location/data/: location_service.dart
lib/features/radar/application/: radar_providers.dart
lib/features/radar/data/: api_signing.dart  kmi_radar_repository.dart  pluvio_backend_repository.dart
lib/features/radar/data/models/: kmi_get_forecasts_dto.dart  kmi_nowcast_dto.dart  kmi_radar_capabilities_dto.dart  pluvio_forecast_dto.dart
lib/features/radar/data/sources/: kmi_app_api_source.dart  kmi_nowcast_source.dart  kmi_radar_source.dart  pluvio_backend_source.dart
lib/features/radar/domain/: nowcast.dart  radar_animation.dart  radar_repository.dart
lib/features/radar/presentation/: radar_screen.dart
lib/features/radar/presentation/widgets/: forecast_chart.dart  precipitation_legend.dart  radar_map.dart  timeline_slider.dart
lib/l10n/: app_de.arb  app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_fr.dart  app_localizations_nl.dart  app_nl.arb
research/: .env.example  .gitignore  README.md  pyproject.toml
research/collectors/: _kmi_signing.py  collect_kmi_live.py  fetch_alaro_24h.py  fetch_eumetsat_msg.py  fetch_kmi_aws.py  fetch_knmi_archive.py
research/docs/: 24h_extension.md  data_inventory.md  findings.md  improvements_backlog.md  model_architecture.md  verification.md
research/model/: README.md  build_aux.py  build_aux_msg.py  build_static.py  dataset.py  evaluate.py  geo.py  train.py  unet.py
research/model/corrdiff/: README.md
research/model/corrdiff/conf/: config_training_pluvio.yaml
research/notebooks/: 01_verification.py  README.md  _lib.py
research/output/: summary.md
research/tools/: build_zarr.py  install_timers.sh  pull_forward.sh  rotate_to_nas.py
research/tools/systemd/: pluvio-pull-alaro.timer  pluvio-pull-kmi-aws.timer  pluvio-pull-knmi-radar.timer  pluvio-pull-meteosat.timer  pluvio-pull@.service  pluvio-rotate.service  pluvio-rotate.timer
test/: widget_test.dart
test/_fixtures/: kmi_get_forecasts_sample.json  kmi_nowcast_sample.json  kmi_radar_capabilities_sample.xml
test/_helpers/: load_fixture.dart
test/features/radar/data/: api_signing_test.dart  kmi_radar_repository_test.dart  pluvio_backend_repository_test.dart
test/features/radar/data/models/: kmi_get_forecasts_dto_test.dart  kmi_nowcast_dto_test.dart  kmi_radar_capabilities_dto_test.dart
test/features/radar/data/sources/: kmi_app_api_source_test.dart  kmi_nowcast_source_test.dart  (+1 more)
test/features/radar/domain/: nowcast_test.dart  radar_animation_test.dart
test/features/radar/presentation/: radar_screen_test.dart
(+3 files in other folders)
