[project]
name = "pluvio-backend"
version = "0.1.0"
description = "Pluvio precipitation forecast cache + HTTP API."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "zarr>=2.18,<3.0",
    "pillow>=10.4",
    "python-dotenv>=1.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pluvio-worker = "pluvio_backend.inference_worker:main"
pluvio-api = "pluvio_backend.api:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM", "RUF"]
# E501: line length handled by formatter. RUF002/003: en/em dashes in prose
# docstrings and comments are intentional.
ignore = ["E501", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
