[project]
name = "pluvio-backend"
version = "0.1.0"
description = "Pluvio precipitation forecast cache + HTTP API."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "zarr>=3.0,<4.0",
    # Pinned directly (not just as zarr's transitive) because <0.16 has no
    # cp314 aarch64 wheel — forcing a source build under QEMU that fails on
    # x86 SIMD flags.
    "numcodecs>=0.16,<0.17",
    "pillow>=10.4",
    "python-dotenv>=1.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-pillow>=10.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pluvio-worker = "pluvio_backend.inference_worker:main"
pluvio-api = "pluvio_backend.api:main"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM", "RUF"]
# E501: line length handled by formatter. RUF002/003: en/em dashes in prose
# docstrings and comments are intentional.
ignore = ["E501", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
files = ["src", "tests"]
# Pragmatic gate: catch real type errors without forcing full annotation of
# numpy/pandas-heavy code. Third-party stubs are spotty, so don't fail on
# missing imports.
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
# Dev tooling pulled by `uv sync --extra dev`.
package = true
