[project]
name = "pluvio-research"
version = "0.1.0"
description = "Verification + horizon-extension research for the Pluvio precipitation app."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pyarrow>=17",
    "pandas>=2.2",
    "numpy>=1.26",
    "h5py>=3.11",
    "owslib>=0.31",
    "python-dotenv>=1.0",
    "click>=8.1",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "duckdb>=1.1",
    "scikit-learn>=1.5",
    "zstandard>=0.22",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["collectors*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
